refactor: comprehensive 25-issue optimization pass
- AnnotationScanner: PUT/DELETE/PATCH support, MethodHandle, signature validation, getMethods()
- Gate: before/after middleware, programmatic routing (get/post/put/delete/patch), CORS credentials/max-age
- GateServer: returned from start() with join()/stop()/isRunning()
- Context: readAllBytes body, 1MB limit, bodyAs/json throw, method(), fluent API
- Config: volatile freeze pattern for immutability after load
- ConfigLoader: renamed from Loadconfig with parameterized logging
- WsHandler: renamed from WsHandle
- WsAdapter: onWebSocketError handler, parameterized logging
- WsContext: send() throws UncheckedIOException
- Router: pre-compiled Pattern, HashMap after match
- Logger: parameterized overloads (format, args)
- UserController: PUT/DELETE endpoints, synchronized mutations, fluent API
- All reviewed and approved by GPT-5.4

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>